# openarm_programming

./: .gitmodules  README.md
ros2_ws2/: openarm_bimanual.urdf
ros2_ws2/install/: local_setup.sh  setup.sh
ros2_ws2/install/hello_moveit_py/lib/hello_moveit_py/: run_moveit
ros2_ws2/install/hello_moveit_py/share/hello_moveit_py/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws2/install/openarm/share/ament_index/resource_index/parent_prefix_path/: openarm
ros2_ws2/install/openarm/share/openarm/: package.sh
ros2_ws2/install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: package.sh
ros2_ws2/install/openarm_bringup/share/openarm_bringup/: package.sh
ros2_ws2/install/openarm_description/share/openarm_description/: package.sh
ros2_ws2/install/openarm_hardware/include/openarm_hardware/: v10_simple_hardware.hpp
ros2_ws2/install/openarm_hardware/share/openarm_hardware/: package.sh
ros2_ws2/log/: latest_build
ros2_ws2/src/hello_moveit_py/: package.xml  setup.py
ros2_ws2/src/hello_moveit_py/hello_moveit_py/: moveit_client.py
