<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_moveit_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="openarm@todo.todo">openarm</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>moveit_msgs</exec_depend> 
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
